<resources xmlns:Xliff="http://schemas.android.com/tools">
    <string name="app_name">History Quiz</string>
    
    <!-- The title of first question -->
    <string name="question_one_title">First Question</string>

    <!-- This is the first question -->
    <string name="question_one">In which year World War One began?</string>

    <!-- The title of second question -->
    <string name="question_two_title">Second Question</string>

    <!-- This is the second question -->
    <string name="question_two">Adolf Hitler was born in which country?</string>

    <!-- The title of third question -->
    <string name="question_three_title">Third Question</string>

    <!-- This is the third question -->
    <string name="question_three">John F.Kennedy was assassinated in?</string>

    <!-- The title of 4th question -->
    <string name="question_four_title">Fourth Question</string>

    <!-- This is the 4th question -->
    <string name="question_four">
        American involvement in the Korean war took place in which decade?
    </string>

    <!-- The title of the 5th question -->
    <string name="question_five_title">Fifth Question</string>

    <!-- This is the 5th question -->
    <string name="question_five">
        The disease that killed a third of Europe\'s population in the 14th century is known as?
    </string>

    <!-- The title of 6th question -->
    <string name="question_six_title">Sixth Question</string>

    <!-- This is the 6th question -->
    <string name="question_six">
        The hundred years war was fought between what two countries?
    </string>

    <!-- Hint text to make the user enter a year -->
    <string name="hint">Enter the year</string>

    <!-- First answer of question two -->
    <string name="question_two_first_answer">France</string>

    <!-- Second answer of question two -->
    <string name="question_two_second_answer">Germany</string>

    <!-- Third answer of question two -->
    <string name="question_two_third_answer">Austria</string>

    <!-- Fourth answer of question two -->
    <string name="question_two_fourth_answer">Hungary</string>

    <!-- First answer of question three -->
    <string name="question_three_first_answer">New York</string>

    <!-- Second answer of question three -->
    <string name="question_three_second_answer">Austin</string>

    <!-- Third answer of question three -->
    <string name="question_three_third_answer">Dallas</string>

    <!-- Fourth answer of question three -->
    <string name="question_three_fourth_answer">Las Vegas</string>

    <!-- First answer of question four -->
    <string name="question_four_first_answer">1940s</string>

    <!-- Second answer of question four -->
    <string name="question_four_second_answer">1950s</string>

    <!-- Third answer of question four -->
    <string name="question_four_third_answer">1960s</string>

    <!-- Fourth answer of question four -->
    <string name="question_four_fourth_answer">1970s</string>

    <!-- First answer of question five -->
    <string name="question_five_first_answer">The White Death</string>

    <!-- Second answer of question five -->
    <string name="question_five_second_answer">The Black Plague</string>

    <!-- Third answer of question five -->
    <string name="question_five_third_answer">The Black Death</string>

    <!-- Fourth answer of question five -->
    <string name="question_five_fourth_answer">The Bubonic Plague</string>

    <!-- First answer of question six -->
    <string name="question_six_first_answer">Italy and Spain</string>

    <!-- Second answer of question six -->
    <string name="question_six_second_answer">England and Germany</string>

    <!-- Third answer of question six -->
    <string name="question_six_third_answer">France and England</string>

    <!-- Fourth answer of question six -->
    <string name="question_six_fourth_answer">Spain and France</string>

    <!-- Text of button to submit answer -->
    <string name="submit">Submit answer</string>

    <!-- Message to notify the user that all answers are correct -->
    <string name="toast_message">Well done all answers are correct</string>

    <!-- Message to let the user know his score in the format of "You scored 4 out of 6" -->
    <string name="toast_message_2">You scored <Xliff:g example="4">%1s</Xliff:g> out of 6</string>

</resources>






